# locke

./: .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/totp/: mod.rs
src-tauri/src/vault/: mod.rs
src-tauri/src/wallet/: mod.rs
src-tauri/src/yubikey/: mod.rs
src/locales/: en.json  ru.json
